# fusesfs

./: .gitignore  AUTHORS  Makefile  Makefile.am  Makefile.in  README.md  config.h  config.status  configure  configure.ac
autom4te.cache/: output.0  requests  traces.0  traces.1
src/: tags
src/fuse/: .main.c.swo  Makefile.am  fusesfs  inode.c  main.c  trueimage256
src/include/bdev/: blockdev.h  defines.h  filedev.h
src/include/fuse/: inode.h
src/include/mksfs/: mksfs.h  mksfs.h~
src/include/sfs/: alloc.h  callback.h  debug.h  defs.h  entry.h  fixfs.h  fsutils.h  io.h  mbr.h  statfs.h  unit.h  utils.h
src/lib/: .mksfs.c.swo  Makefile  Makefile.am  Makefile.am~  Makefile.in  filedev.c  io.c  mksfs.c  mksfs.c~  utils.c
src/lib/.deps/: filedev.Po  io.Po  mksfs.Po  utils.Po
src/lib/sfs/: Makefile  Makefile.am  Makefile.in  alloc.c  callback.c  fixfs.c  fsutils.c  io.c  sfs_creat.c  sfs_delete.c  sfs_getattr.c  sfs_init.c  sfs_mkdir.c  sfs_open.c  sfs_read.c  sfs_readdir.c  sfs_release.c  sfs_rename.c  sfs_rmdir.c  sfs_truncate.c  sfs_unlink.c  sfs_write.c  statfs.c  utils.c
src/lib/sfs/.deps/: io.Po  sfs_init.Po  utils.Po
src/mkfs/: Makefile  Makefile.am  Makefile.in  mkfs.sfs
src/mkfs/.deps/: main.Po
src/mksfs/: Makefile  Makefile.am  Makefile.am~  Makefile.in  main.c  main.c~  mksfs
src/mksfs/.deps/: main.Po
tests/: Makefile  Makefile.am  Makefile.in  check_block  check_block.c  check_block_read  check_block_read.c  check_block_write  check_block_write.c  check_creat.c  check_init.c  check_mkdir.c  check_mkfs.c  check_read_write.c  check_readdir.c  check_unlink.c  check_utils.c  gen_dev.sh  testreaddir  testrw  trueimage1024  trueimage256  trueimage512
tests/.deps/: check_block.Po  check_block_read.Po  check_block_write.Po  check_init.Po  check_mkfs.Po  check_utils.Po  utils.Po
