lib_LIBRARIES = libsfs.a
libsfs_a_SOURCES = io.c utils.c sfs_init.c sfs_creat.c sfs_unlink.c sfs_mkdir.c sfs_readdir.c fsutils.c callback.c alloc.c sfs_release.c sfs_getattr.c sfs_rmdir.c sfs_write.c sfs_read.c sfs_open.c sfs_delete.c sfs_rename.c sfs_truncate.c statfs.c fixfs.c
AM_CFLAGS = -Wall -Werror -O2 -I$(top_srcdir)/src/include
